@@ -2,8 +2,9 @@
 # last modified 16 December 2009 by M. Friendly
 # last modified  2 January 2010 by M. Friendly: export cross3d
 # last modified 27 January 2010 by M. Friendly: export statList etc
+# last modified 5 Aug 2010 by M. Friendly: export etasq, gsorth, termMeans
 export(heplot, heplot3d, heplot1d, ellipse3d.axes, mark.H0, cross3d, statList, covList, colMeansList, arrow3d,
-	etasq, gsorth)
+	etasq, gsorth, termMeans)
 S3method(heplot, mlm)
 S3method(heplot3d, mlm)
 S3method(pairs, mlm)
