@@ -1,6 +1,7 @@
 \name{heplots-internal}
 \alias{lambda.crit}
 \alias{he.rep}
+\alias{termInfo}
 
 \title{Internal heplots functions}
 
@@ -14,7 +15,6 @@ Roy.crit(alpha, p, dfh, dfe)
 HLT.crit(alpha, p, dfh, dfe)
 he.rep(x, n)
 termInfo(x)
-termMeans(mod, term, label.factors=TRUE)
 }
 
 \arguments{
